--- a/templates/productsPage.html
+++ b/templates/productsPage.html
@@ -3,36 +3,49 @@
     <button class="btn btn-info product-links"><img src="{{product.imageURL}}" alt="" /><h6>{{product.name}}</h6></button><br>
     <input class="form-control text-center" type="number" placeholder="Enter Quantity" ng-model="q">
     <br>
-    <input class="btn" type="button" name="name" value="Add to Order" ng-click="addToOrder(product.productID, q)">
-
-
+    <input class="btn" type="button" name="name" value="Add to Order" ng-click="addToOrder(product.name,q,product.productID)">
   </div>
   <div class="image-container" ng-repeat="need in needInfo">
-    <button class="btn btn-info product-links"><img src="{{need.imageURL}}" alt="" /><h6>{{need.name}}<br><small>Customizable</small>
+    <button class="btn btn-info product-links"><img src="{{need.imageURL}}" alt="" /><h6>{{need.name}}<br><medium>Customizable</medium>
     </h6>
     </button>
     <input class="form-control text-center" type="number" placeholder="Enter Quantity" ng-model="q">
     <br>
-    <input class="btn" type="button" name="name" value="Add to Order" ng-click="addTemplateToOrder(need.productID,q,name,email,phone)">
+    <input class="btn" type="button" name="name" value="Add to Order" ng-click="addToOrder(need.name,q,need.productID)">
   </div>
   <br>
   <br>
-  <button type="button" name="button" ng-click="checkingOut()">Checkout</button>
 </div>
+  <br>
+  <div class="container-fluid">
+    <button class="btn btn-warning" type="button" name="button" ng-hide=isCheckedOut ng-click="checkingOut()">Checkout</button>
+  </div>
 <hr>
-<div id="bottom" class="container" ng-show=isCheckedOut>
+<div class="" ng-show=isCheckedOut>
+  <div class="order-list text-center" ng-repeat="order in cart">
+    <ul class="checkout-list">
+      <li>{{order.name}}</li>
+    </ul>
+  </div>
     <br>
-    <div id="footer-container">
+    <div id="footer-container" ng-show=hasCheckedOut>
       <h1>Place Order</h1>
     <form class="" method="post">
       <input class="form-control checkout-info" placeholder="first name" type="text" ng-model="firstName">
       <input class="form-control checkout-info" placeholder="last name" type="text" ng-model="lastName">
       <input class="form-control checkout-info" placeholder="email" type="text" ng-model="email">
       <input class="form-control checkout-info" placeholder="phone #" type="text" ng-model="phone">
-      <input class="form-control checkout-info" placeholder="payment type" type="text" ng-model="phone">
-      <input class="form-control checkout-info" placeholder="card #" type="text" ng-model="phone">
-      <input class="form-control checkout-info" placeholder="cvc code" type="text" ng-model="phone">
-      <input class="form-control checkout-info" placeholder="first name" type="submit" name="name" value="Submit Order">
+      <input class="form-control checkout-info" placeholder="payment type" type="text" ng-model="payment">
+      <input class="form-control checkout-info" placeholder="card #" type="text" ng-model="card">
+      <input class="form-control checkout-info" placeholder="cvc code" type="text" ng-model="cvc">
+      <input class="form-control checkout-info" placeholder="first name" type="submit" name="name" value="Submit Order" ng-click="checkedOut()">
     </form>
   </div>
+
+  <div class="container" ng-hide=hasCheckedOut>
+    <h1>Thank You {{firstName}} {{lastName}}</h1>
+    <h1>A confirmation email has been sent to {{email}}</h1>
+    <h1>Order #: {{orderNumber}}</h1>
+  </div>
+
 </div>
