--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@
   margin: 1rem;
 }
 
+.cart {
+  position: fixed;
+  z-index: 9999;
+  width: 25%;
+  margin-top: -10rem;
+  background-color: red;
+}
+
 
 img {
   margin-top: .5rem;
